gcc/testsuite/rust/rustc/ui/parser/keyword-while-as-identifier.rs
// This file was auto-generated using 'src/etc/generate-keyword-tests.py while'

fn main() {
    let while = "foo"; // { dg-error "" "" { target *-*-* } }
}

